# shellserver

./: .coverage  .shellserver.toml  LICENSE  README.md  ShellServer.psm1  gitstatus_test_coverage.md  on_startup.ps1  requirements.txt  tests.py
client/binary/: Completers.cs  Main.cs  RuntimeReadLine.cs  ShellServer.csproj  ShellServer.psd1
client/script/: ShellServer.psd1  ShellServer.psm1
server/: gitstatus_test_coverage.md  gitstatus_tests.py  pyproject.toml  shellserver_tests.py  tests.py
server/shellserver/: __main__.py  cli.py  server.py  style.py  utils.py
server/shellserver/gitstatus/: base.py  high.py  interface.py  packs.py  plugins.py  utils.py
shellserver/: __init__.py  __main__.py  cache.py  classes.py  cli.py  dispatch.py  histdb.py  ls.py  server.py  style.py  theme.py  utils.py
shellserver/gitinfo/: __init__.py  git_exe.py  high.py  low.py
shellserver/gitstatus/: __init__.py  base.py  high.py  interface.py  low.py  main.py  medium.py  packs.py  plugins.py  tests.py  utils.py
shellserver/tests/: __init__.py
