[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'shellserver'
version = '0.0.17'
authors = [
  {name = 'Henrique do Val'},
  {email = 'henrique.val@hotmail.com'}
]

description = 'Server to aid shell navigation.'
readme = {file = "README.md", content-type = 'text/markdown'}
requires-python = '>=3.9'
license = {text = 'MIT'}
dependencies = [
  'darkdetect>=0.7.1',
  'win-basic-tools>=0.3.4',
  "tomlkit>=0.11.5; python_version < '3.11'"
]

classifiers = [
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'License :: OSI Approved :: MIT License',
  'Development Status :: 4 - Beta',
  'Operating System :: Microsoft :: Windows',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Topic :: System :: Shells',
  'Topic :: Terminals',
  'Typing :: Typed'
]

[project.urls]
Home-page = "https://github.com/HenriquedoVal/shellserver"

[project.scripts]
shellserver = 'shellserver.cli:main'

# [project.optional-dependencies]
# all = [
#   "whatchdog>=3.2.1",
#   "ssd_checker>=1.0.3",
#   "pygit2>=1.11.1"
# ]

[tool.setuptools.packages.find]
include = ["shellserver", "shellserver.gitstatus"]

[tool.pylsp-mypy]
enabled = false
live_mode = false
dmypy = true
